# tissue-ai

./: .dockerignore  .env.example  .gitignore  AGENTS_QUICKSTART.md  Dockerfile  MULTI_AGENT_GUIDE.md  README.md  agents_config.py  llm_service.py  main.py  pyproject.toml  requirements.txt  schema_validator.py
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  session.py  utils.py
backend/app/middleware/: auth.py
backend/app/repositories/: repository.py
backend/app/routes/: api.py  auth.py
backend/app/services/: diagram_layout.py  diagram_prompt.py  fonts.py  groq.py  supabase_auth.py
backend/app/static/js/: diagram.js
frontend/: README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: globals.css  layout.tsx
frontend/app/app/: layout.tsx  page.tsx
frontend/app/app/chats/[chatId]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: composer.tsx  diagram-widget.tsx  sidebar.tsx
frontend/lib/: api.ts  types.ts  utils.ts
static/: agents-modal.css  agents.js  app.js  style.css
templates/: index.html
